<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pieprzyca.dawid.skiapp.RegisterActivity">

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00CCCC"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/prompt_name"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#000" />

        <EditText
            android:id="@+id/etSurName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/prompt_surname"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#000" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#000" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_enhanced_encryption_black_24dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#000" />

        <Button
            android:id="@+id/send_register_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/mybutton"
            android:text="@string/button_register"
            android:textColor="#fff" />
        <Button
            android:id="@+id/cancel_register_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/mybutton"
            android:text="@string/button_cancel"
            android:textColor="#fff" />
    </LinearLayout>

</RelativeLayout>
